# engine

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: engine.yml
assets/models/: kaws.glb  zenly.glb
assets/models/titanic/: titanic.mtl
assets/shaders/basic/: basic.frag  basic.vert
assets/shaders/chunk/: chunk.frag  chunk.vert
assets/shaders/color/: color.frag  color.vert
assets/shaders/depth/: depth.frag  depth.geom  depth.vert
assets/shaders/grass/: grass.frag  grass.geom  grass.vert
assets/shaders/heightmap/: heightmap.frag
assets/shaders/light/: light.frag  light.vert
assets/shaders/material/: material.frag  material.vert
assets/shaders/mirror/: mirror.frag  mirror.vert
assets/shaders/normal/: normal.frag  normal.geom  normal.vert
assets/shaders/ocean/: ocean.frag  ocean.vert
assets/shaders/sand/: sand.frag  sand.vert
assets/shaders/shadow/: shadow.frag  shadow.vert
assets/shaders/skybox/: skybox.frag  skybox.vert
assets/shaders/terrain/: terrain.frag  terrain.vert
assets/shaders/texture/: texture.frag  texture.vert
docs/: Doxyfile.in
src/: main.cpp  types.h
src/camera/: camera.cpp  camera.h
src/clock/: clock.cpp  clock.h
src/cubemap/: cubemap.cpp  cubemap.h
src/gltf/: gltf.h
src/input/: input.cpp  input.h
src/material/: material.h
src/mesh/: mesh.cpp  mesh.h
src/mesh/cube/: cube.cpp  cube.h
src/mesh/heightmap/: heightmap.cpp  heightmap.h
src/mesh/model/: model.cpp  model.h
src/mesh/plane/: plane.cpp  plane.h
src/mesh/skybox/: skybox.cpp  skybox.h
src/mesh/sphere/: uv_sphere.cpp  uv_sphere.h
src/models/: mesh.cpp  mesh.h  texturedMesh.cpp  texturedMesh.h
src/models/cube/: box.cpp  box.h  cube.cpp  cube.h
src/models/plane/: floor.cpp  floor.h  plane.cpp  plane.h
src/models/skybox/: skybox.cpp  skybox.h
src/models/sphere/: uvSphere.cpp  uvSphere.h
src/models/trash/: cube2.cpp  cube2.h  lightCube.cpp  lightCube.h
src/nlohmann/: json.hpp
src/object/: mesh.cpp  mesh.h  object.h
src/object/cube/: cube.cpp  cube.h
src/object/heightmap/: heightmap.cpp  heightmap.h
src/object/heightmap/ocean/: ocean.cpp  ocean.h
src/object/heightmap/terrain/: terrain.cpp  terrain.h
src/object/model/: assimp_model.cpp  assimp_model.h  fx_gltf_model.cpp  fx_gltf_model.h  tiny_gltf_model.cpp  tiny_gltf_model.h
src/object/plane/: plane.cpp  plane.h
src/object/skybox/: skybox.cpp  skybox.h
src/object/sphere/: uv_sphere.cpp  uv_sphere.h
src/scene/: scene.cpp  scene.h
src/shader/: shader.cpp  shader.h
src/texture/: cubemap_texture.cpp  cubemap_texture.h  texture.cpp  texture.h
src/utils/: constants.h  fft_utils.h  fileUtils.cpp  fileUtils.h  file_utils.h  imageUtils.cpp  imageUtils.h  image_utils.h  maths_utils.h  types.h
src/utils/clock/: clock.cpp  clock.h
src/utils/phillips/: phillips.cpp  phillips.h
src/window/: window.cpp  window.h
src/world/: array3D.h  chunk.cpp  chunk.h  heightmap.cpp  heightmap.h
submodules/: CMakeLists.txt
